# CurveFitting

./: .gitignore  CMakeLists.txt  README.md  curve_fit.py
include/: CeresCost.h  CommonCurve.h
log/: latest_list
src/ceres/: CMakeLists.txt  demoCeres.cpp  main.cpp
src/g2o/: CMakeLists.txt  demoG2O.cpp  main.cpp
